* updated to Java 21 * TODO: re-implement file browser * updated to SciJava 40